--- a/package.json
+++ b/package.json
@@ -6,23 +6,29 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --verbose --no-cache -u --coverage --forceExit --detectOpenHandles --logHeapUsage",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
+    "@testing-library/react-native": "^9.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "react": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "0.66.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-testing-library": "^6.0.0",
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.4",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
@@ -33,6 +39,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.4.4"
   },
   "resolutions": {
@@ -47,6 +54,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": [
+      "./jestSetup.js"
     ]
   }
 }
